# MC101---Dion

./: README.md  pyproject.toml
Task1/: .env  example.env.txt  main.py  pyproject.toml
Task1/utils/: constants.py  security.py
Task1/v1/users/: UserDBModels.py  UserEndPoints.py
Task2/: .env  Dockerfile  Makefile  config.py  docker-composer.yml  main.py  pyproject.toml  requirements.txt
Task2/v1/users/: UserEndPoints.py  UserSchemas.py
task3/: .env  Dockerfile  README.md  config.py  docker-composer.yml  logger.py  main.py  pyproject.toml  requirements.txt
task3/db/: DBConfig.py  DBModels.py
task3/utils/: constants.py  security.py
task3/v1/users/: UserDBModels.py  UserEndPoints.py  UserSchemas.py
