[project]
name = "d2"
version = "0.1.0"
description = ""
authors = [
    {name = "Dion Lind",email = "dion.lind22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.117.1,<0.118.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
